# Network_Storage

./: CMakeLists.txt  README.md  client_main.cpp  main.cpp  server_main.cpp
includes/: Client.hpp  Protocol.hpp  Server.hpp
sfml-simple/include/SFML/: Config.hpp  Network.hpp  System.hpp
sfml-simple/include/SFML/Network/: Socket.hpp  TcpListener.hpp  TcpSocket.hpp
sfml-simple/include/SFML/System/: Time.hpp
sfml-simple/src/: sfml_network.cpp
src/: Client.cpp  Protocol.cpp
tests/: server_tests.cpp
